tests withlogredirect method

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,10 @@
         {
             "name": "PowerShell",
             "type": "PowerShell",
-            "program": "test.ps1",
-            "args": "-Verbose"
+            "request": "launch",
+            "program": "${file}",
+            "args": [],
+            "cwd": "${file}"
         }
     ]
 }
